--- a/controlpanel/src/styles.css
+++ b/controlpanel/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+body {
+  padding: 1em;
+}
