controlpanel: boilerplates for reading laitos system info

--- a/controlpanel/src/app/dashboard.component.html
+++ b/controlpanel/src/app/dashboard.component.html
@@ -1,2 +1,25 @@
 <h1>Dashboard</h1>
+
+<div class="card-collection">
+    <mat-card class="overview-card">
+        <mat-card-header>
+            <mat-card-title>System Resources</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div *ngIf="systemInfo | async as info; else loading">
+                <div *ngIf="info.Status as status">
+                    <p>Memory used: {{ status.SysUsedMemMB }} MB / {{ status.SysTotalMemMB }} MB</p>
+                    <mat-progress-bar
+                        value="{{(status.SysUsedMemMB ?? 0) / (status.SysTotalMemMB ?? 1) * 100 }}"></mat-progress-bar>
+                    <p>Root disk used: {{ status.DiskUsedMB }} MB / {{ status.DiskCapMB }} MB</p>
+                    <mat-progress-bar
+                        value="{{(status.DiskUsedMB ?? 0) / (status.DiskCapMB ?? 1) * 100 }}"></mat-progress-bar>
+                </div>
+            </div>
+            <ng-template #loading>
+                <mat-spinner></mat-spinner>
+            </ng-template>
+        </mat-card-content>
+    </mat-card>
+</div>
 <button mat-raised-button color="primary" (click)="navSettings()">Settings</button>
