--- a/controlpanel/src/app/setup.component.html
+++ b/controlpanel/src/app/setup.component.html
@@ -1,22 +1,49 @@
-<h1>Set up laitos control panel</h1>
+<h1>Control panel setup</h1>
 
-<form [formGroup]="configForm" (ngSubmit)="submit()">
-    <p>
-        <mat-form-field>
-            <mat-label>HTTP(S) server address</mat-label>
-            <input matInput placeholder="" formControlName="serverAddr" required />
-            <mat-hint>e.g. http://laitos.example.com</mat-hint>
-        </mat-form-field>
-    </p>
-    <p>
-        <mat-form-field>
-            <mat-label>Endpoint name of the information API</mat-label>
-            <input matInput placeholder="" formControlName="infoEndpoint" required />
-            <mat-hint>e.g. /laitos-info-handler</mat-hint>
-        </mat-form-field>
-    <p>
-    <p>
-        <button mat-raised-button type="submit" color="primary" [disabled]="!configForm.valid">Validate &amp;
-            Apply</button>
-    </p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="server-collection">
+        <mat-card class="server-config" *ngFor="let server of getServers().controls; index as i">
+            <mat-card-content>
+                <div formArrayName="servers">
+                    <div [formGroupName]="i">
+                        <p>
+                            <mat-form-field>
+                                <mat-label>Server #{{ i+1 }} nickname</mat-label>
+                                <input matInput placeholder="" formControlName="nickname" required />
+                                <mat-hint>e.g. my home server</mat-hint>
+                            </mat-form-field>
+                        </p>
+                        <p>
+                            <mat-form-field>
+                                <mat-label>HTTP(S) address</mat-label>
+                                <input matInput placeholder="" formControlName="address" required />
+                                <mat-hint>e.g. http://laitos.example.com</mat-hint>
+                            </mat-form-field>
+                        </p>
+                        <p>
+                            <mat-form-field>
+                                <mat-label>Endpoint name of the information API</mat-label>
+                                <input matInput placeholder="" formControlName="infoEndpoint" required />
+                                <mat-hint>e.g. /laitos-info-handler</mat-hint>
+                            </mat-form-field>
+                        <p>
+                    </div>
+                </div>
+                <div class="button-group">
+                    <button mat-stroked-button type="button" (click)="testServer(i)">Test</button>
+                    <button mat-stroked-button type="button" color="warn" (click)="deleteServer(i)">Delete</button>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <ng-container *ngIf="form.get('servers') as formServers">
+        <div
+            *ngIf="formServers.errors && formServers.errors['dupNickname'] === true && (formServers.touched || formServers.dirty)">
+            Each server must have a unique nickname.
+        </div>
+    </ng-container>
+    <div class="button-group">
+        <button mat-stroked-button type="button" (click)="addServer(EMPTY_SERVER)">Add</button>
+        <button mat-raised-button type="submit" color="primary" [disabled]="!form.valid">Save</button>
+    </div>
 </form>
