controlpanel: display process information

--- a/controlpanel/src/app/dashboard.component.css
+++ b/controlpanel/src/app/dashboard.component.css
@@ -1,10 +1,16 @@
 .overview-card {
   margin: 1em;
-  width: 30em;
+  width: 32em;
 }
 
 .card-collection {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+}
+
+li,
+td {
+  overflow-wrap: break-word;
+  word-break: break-all;
 }
